# push_swap_v2

./: CMakeLists.txt  Makefile  author  list_liba.c  test.c  text
includes/: push_swap.h
libftprintf/ft_printf/: check_flag.c  ft_accuracy_sdxo.c  ft_arg_part_cdisp.c  ft_arg_part_ofpro.c  ft_arg_part_xubkw.c  ft_check_letter.c  ft_nul.c  ft_printf.c  ft_zero_pro_s_c.c  ft_zero_pxo.c  make_str_d.c  make_str_f.c  make_str_sxo.c  make_weight.c  round_double.c
libftprintf/includes/: ft_printf.h  get_next_line.h  libft.h
libftprintf/libft/: ft_atoi.c  ft_atoi_long_long.c  ft_bzero.c  ft_count_word.c  ft_digit.c  ft_double_array.c  ft_error.c  ft_factorial.c  ft_free.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_u.c  ft_len_word.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstfree.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_data.c  ft_lstnew_fd.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_modul.c  ft_print_list.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+41 more)
src/: create_lists.c  create_sort_array.c  print_stack.c  save_stack.c  stack_is_sort.c  swap_command.c  validate_stack.c
src/checker/: main.c  move_stack.c  save_command.c
src/push_swap/: main.c  print_command.c  sort_less_three_elem.c  sort_more_5_elem.c  sort_stack_a.c  sort_stack_b.c  swap_from_bot.c  swap_top_slow_and_fast.c
